<resources>
    <string name="app_name">AppInflablesFeroz</string>
    <string name="tn_photo">tnPhoto</string>
    <string name="txt_field_menu_inflables">Inflables</string>
    <string name="txt_field_menu_contactos">Contactos</string>
    <string name="txt_field_menu_ubicanos">Ubicanos</string>
    <string name="txt_field_menu_nuestras_experiencias">Nuestras Experiencias</string>
    <string name="txt_field_menu_Buzon">Buzon de quejas y sugerencias</string>
    <string name="txt_field_menu_administrar">Administrar</string>
    <string name="txt_field_menu_add_inflables">Agregar Inflables</string>
    <string name="txt_field_menu_add_contactos">Agregar Contactos</string>
    <string name="txt_field_menu_add_nuestras_experiencias">Agregar Nuevas Experiencias</string>
    <string name="txt_field_menu_add_Buzon">Agregar Buzon</string>
    <string name="txt_field_seleccion_inflable_list">Selecciona un Inflable</string>
    <string name="txt_field_medidas">Medidas</string>
    <string name="txt_field_precio">Precio</string>
    <string name="txt_field_descripcion">Descripcion</string>
    <string name="common_validate_field_required">Requerido</string>
    <string name="main_message_add_image">Agrega una Foto o Imagen</string>
    <string name="txt_field_comentarios">Deja un comentario</string>
    <string name="txt_field_menu_valoranos">Valoranos</string>
    <string name="common_validate_field_add_valoracion">Agrega una calificacion</string>
    <string name="txt_field_fecha">Fecha</string>
    <string name="txt_field_delete">Eliminar</string>
    <string name="txt_field_autorizar">Autorizar</string>
    <string name="txt_field_menu_contrataciones">Contrataciones</string>
    <string name="txt_field_titulo_buzon_cabecera">Compartenos un comentario</string>
    <string name="txt_field_menu_add_nombre">Ingresar Nombre</string>
    <string name="txt_field_guaardar">Guardar</string>
    <string name="title_activity_ubicanos">Map</string>
    <string name="txt_field_menu_miperfil">Mi Perfil</string>
    <string name="txt_field_correo">Correo</string>
    <string name="txt_field_proveedor">Proveedor</string>
    <string name="txt_field_cerrar_sesion">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_field_iniciar_sesion">Iniciar Sesion</string>
    <string name="txt_field_telefono">Telefono</string>
    <string name="txt_field_buzon">Buzon</string>
    <string name="txt_field_menu_add_telefono">Telefono</string>
    <string name="txt_field_menu_add_colonia">Colonia</string>
    <string name="txt_field_menu_add_direccion">Direccion</string>
    <string name="txt_field_menu_add_correo">Correo</string>
    <string name="txt_field_menu_add_referencias">Referencias</string>
</resources>