<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menuprincipal.administrar.menu.MenuAdministracionActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_default_16"
        android:layout_marginBottom="@dimen/padding_default_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/opcionAddInflables"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/common_padding_min_8"
                android:layout_marginStart="@dimen/padding_default_16"
                android:layout_marginEnd="@dimen/padding_default_16"
                android:background="@drawable/colores_gradientes_sea"
                android:orientation="vertical"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgFotoMenuInflables"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/common_padding_min_8"
                    android:layout_marginStart="@dimen/common_padding_min_8"
                    android:layout_marginEnd="@dimen/common_padding_min_8"
                    android:layout_marginBottom="@dimen/common_padding_min_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />




                <TextView
                    android:id="@+id/tvTituloInflables"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_field_menu_add_inflables"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_on_secondary"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/padding_default_16"
                    app:layout_constraintStart_toEndOf="@id/imgFotoMenuInflables"
                    app:layout_constraintEnd_toStartOf="@id/imgDecorationInflables"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgDecorationInflables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flecha_siguiente"
                    android:layout_marginEnd="@dimen/padding_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/opcionAddContactos"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_default_16"
                android:layout_marginStart="@dimen/padding_default_16"
                android:layout_marginEnd="@dimen/padding_default_16"
                android:background="@drawable/colores_gradientes_mango"
                android:orientation="vertical"

                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgFotoMenuContactos"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/common_padding_min_8"
                    android:layout_marginStart="@dimen/common_padding_min_8"
                    android:layout_marginEnd="@dimen/common_padding_min_8"
                    android:layout_marginBottom="@dimen/common_padding_min_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTituloContactos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_field_menu_add_contactos"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_on_secondary"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/padding_default_16"
                    app:layout_constraintStart_toEndOf="@id/imgFotoMenuContactos"
                    app:layout_constraintEnd_toStartOf="@id/imgDecorationContactos"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgDecorationContactos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flecha_siguiente"
                    android:layout_marginEnd="@dimen/padding_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/opcionAddExperiencias"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_default_16"
                android:layout_marginStart="@dimen/padding_default_16"
                android:layout_marginEnd="@dimen/padding_default_16"
                android:background="@drawable/colores_gradientes_sky"
                android:orientation="vertical"

                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgFotoMenuExperiencias"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/common_padding_min_8"
                    android:layout_marginStart="@dimen/common_padding_min_8"
                    android:layout_marginEnd="@dimen/common_padding_min_8"
                    android:layout_marginBottom="@dimen/common_padding_min_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTituloExperiencias"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_field_menu_add_nuestras_experiencias"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_on_secondary"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/padding_default_16"
                    app:layout_constraintStart_toEndOf="@id/imgFotoMenuExperiencias"
                    app:layout_constraintEnd_toStartOf="@id/imgDecorationExperiencias"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgDecorationExperiencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flecha_siguiente"
                    android:layout_marginEnd="@dimen/padding_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/opcionAddBuzon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/padding_default_16"
                android:layout_marginStart="@dimen/padding_default_16"
                android:layout_marginEnd="@dimen/padding_default_16"
                android:background="@drawable/colores_gradientes_fire"
                android:orientation="vertical"

                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgFotoMenuBuzon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/common_padding_min_8"
                    android:layout_marginStart="@dimen/common_padding_min_8"
                    android:layout_marginEnd="@dimen/common_padding_min_8"
                    android:layout_marginBottom="@dimen/common_padding_min_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTituloBuzon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_field_menu_add_Buzon"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_on_secondary"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="@dimen/padding_default_16"
                    app:layout_constraintStart_toEndOf="@id/imgFotoMenuBuzon"
                    app:layout_constraintEnd_toStartOf="@id/imgDecorationBuzon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgDecorationBuzon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flecha_siguiente"
                    android:layout_marginEnd="@dimen/padding_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>